[package]
name = "reaper-platform"
version = "0.1.0"
edition = "2021"
# Not published to crates.io — internal workspace crate (Plan 06: lets
# cargo-deny treat it as private for license/wildcard checks).
publish = false
description = "Reaper Platform - Distributed agent management"

[dependencies]
reaper-core = { path = "../../crates/reaper-core" }
policy-engine = { path = "../../crates/policy-engine" }
axum = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { workspace = true }
prometheus = { version = "0.14", features = ["process"] }
lazy_static = "1.4"

[dev-dependencies]
criterion = { workspace = true }
cucumber = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }

[[bench]]
name = "platform_bench"
harness = false

[[test]]
name = "platform_bdd_tests"
harness = false
