[package]
name = "reaper-e2e-tests"
version = "0.1.0"
edition = "2021"
publish = false
description = "End-to-end integration tests for Reaper platform"

[dependencies]
# Runtime
tokio = { workspace = true, features = ["full", "test-util"] }

# HTTP
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utils
uuid = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[test]]
name = "e2e_tests"
path = "tests/e2e_tests.rs"
harness = true
