[package]
name = "reaper-cli"
version = "0.1.0"
edition = "2021"
description = "Reaper CLI - Command-line interface for management"

[dependencies]
reaper-core = { path = "../../crates/reaper-core" }
policy-engine = { path = "../../crates/policy-engine" }
reaper-ebpf = { path = "../../crates/reaper-ebpf" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.12.23", features = ["json"] }
uuid = { workspace = true }
tabled = "0.16"

[dev-dependencies]
criterion = { workspace = true }
cucumber = { workspace = true }
async-trait = { workspace = true }

[[bench]]
name = "cli_bench"
harness = false
