[package]
name = "reaper-cli"
version = "0.1.0"
edition = "2021"
# Not published to crates.io — internal workspace crate (Plan 06: lets
# cargo-deny treat it as private for license/wildcard checks).
publish = false
description = "Reaper CLI - Command-line interface for management"

[dependencies]
reaper-core = { path = "../../crates/reaper-core" }
policy-engine = { path = "../../crates/policy-engine" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tokio = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.12.23", features = ["json"] }
uuid = { workspace = true }
tabled = "0.17"

[target.'cfg(target_os = "linux")'.dependencies]
reaper-ebpf = { path = "../../crates/reaper-ebpf" }

[dev-dependencies]
criterion = { workspace = true }
cucumber = { workspace = true }
async-trait = { workspace = true }

[[bench]]
name = "cli_bench"
harness = false
