[package]
name = "reaper-mcp"
version = "0.1.0"
edition = "2021"
# Not published to crates.io — internal workspace crate (Plan 06: lets
# cargo-deny treat it as private for license/wildcard checks).
publish = false
description = "Reaper MCP adapter - stdio MCP server gating tool calls through a Reaper Agent"

[dependencies]
reaper-sdk = { path = "../../crates/reaper-sdk" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
axum = { workspace = true }

[lints]
workspace = true
